CKBootcamp-K8s/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  selector:
    app: bootcamp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
